data/all_generated_tests/raw_wast_tests/br_table_UnreachableCodeExecution_2129.wast
;; 9. **Incorrect Operand Handling**:    - Description: Test with an operand stack that’s manipulated in a way which mismatches the expected operand stack configuration exactly when the branch leads to `unreachable`.    - Constraint: Checks correct stack unwinding and operand reconfiguration upon branching.    - Relation: Incorrect stack handling pre-branch might immediately lead to `unreachable` when intended paths are unhandled.

(assert_invalid
  (module
    (func (param i32)
      (block (loop
        (br_table 0 0 1 (i32.const 0) (unreachable))
      ))
    )
  )
  "type mismatch"
)